k8s/dev/rig-and-barter-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rig-and-barter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rig-and-barter-frontend
  template:
    metadata:
      labels:
        app: rig-and-barter-frontend
    spec:
      containers:
        - name: rig-and-barter-frontend
          image: cjshore1996/dev-rig-and-barter-frontend:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: rig-and-barter-frontend
spec:
  # type: NodePort  # Expose the service on a static port on each node
  selector:
    app: rig-and-barter-frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pc-rig-and-barter-frontend-route
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pc-rig-and-barter.com`)
      kind: Rule
      services:
        - name: rig-and-barter-frontend
          port: 4200
      middlewares:
        - name: default-headers # may not need
  tls:
   secretName: rig-and-barter-staging-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pc-rig-and-barter-backend-route
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pc-rig-and-barter.com`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api-gateway
          port: 9000
      middlewares:
        - name: default-headers # may not need
  tls:
   secretName: rig-and-barter-staging-tls
